--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<p>Szeroko nad błękitnym Niemnem rozciągnionych;</p>
 		<p>Do tych pól malowanych zbożem rozmaitem,</p>
 		<p>Wyzłacanych pszenicą, posrebrzanych żytem;</p>
+		<p>Gdzie panieńskim rumieńcem dzięcielina pała</p>
 	</div>
 </body>
 </html>
