Add header and footer to index.html and styles to them

--- a/index.html
+++ b/index.html
@@ -8,27 +8,39 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1 class="page-title">Pan Tadeusz</h2>
-		<h2 class="page-subtitle">by Adam Mickiewicz</h2>
-		<p>Litwo! Ojczyzno moja! ty jesteś jak zdrowie.</p>
-		<p>Ile cię trzeba cenić, ten tylko się dowie,</p>
-		<p>Kto cię stracił. Dziś piękność twą w całej ozdobie</p>
-		<p>Widzę i opisuję, bo tęsknię po tobie.</p>
-		<p>Panno Święta, co jasnej bronisz Częstochowy</p>
-		<p>I w Ostrej świecisz Bramie! Ty, co gród zamkowy</p>
-		<p>Nowogródzki ochraniasz z jego wiernym ludem!</p>
-		<p>Jak mnie dziecko do zdrowia powróciłaś cudem</p>
-		<p>(Gdy od płaczącej matki pod Twoją opiekę</p>
-		<p>Ofiarowany, martwą podniosłem powiekę</p>
-		<p>I zaraz mogłem pieszo do Twych świątyń progu</p>
-		<p>Iść za wrócone życie podziękować Bogu),</p>
-		<p>Tak nas powrócisz cudem na Ojczyzny łono.</p>
-		<p>Tymczasem przenoś moję duszę utęsknioną</p>
-		<p>Do tych pagórków leśnych, do tych łąk zielonych,</p>
-		<p>Szeroko nad błękitnym Niemnem rozciągnionych;</p>
-		<p>Do tych pól malowanych zbożem rozmaitem,</p>
-		<p>Wyzłacanych pszenicą, posrebrzanych żytem;</p>
-	</div>
+	<header class="header">
+		<div class="container">
+			<h1 class="page-title">Największe dzieła polskiej literatury</h1>
+		</div>
+	</header>
+	
+	<section class="content">
+		<div class="container">
+			<h1 class="page-title">Pan Tadeusz</h2>
+			<h2 class="page-subtitle">by Adam Mickiewicz</h2>
+			<p>Litwo! Ojczyzno moja! ty jesteś jak zdrowie.</p>
+			<p>Ile cię trzeba cenić, ten tylko się dowie,</p>
+			<p>Kto cię stracił. Dziś piękność twą w całej ozdobie</p>
+			<p>Widzę i opisuję, bo tęsknię po tobie.</p>
+			<p>Panno Święta, co jasnej bronisz Częstochowy</p>
+			<p>I w Ostrej świecisz Bramie! Ty, co gród zamkowy</p>
+			<p>Nowogródzki ochraniasz z jego wiernym ludem!</p>
+			<p>Jak mnie dziecko do zdrowia powróciłaś cudem</p>
+			<p>(Gdy od płaczącej matki pod Twoją opiekę</p>
+			<p>Ofiarowany, martwą podniosłem powiekę</p>
+			<p>I zaraz mogłem pieszo do Twych świątyń progu</p>
+			<p>Iść za wrócone życie podziękować Bogu),</p>
+			<p>Tak nas powrócisz cudem na Ojczyzny łono.</p>
+			<p>Tymczasem przenoś moję duszę utęsknioną</p>
+			<p>Do tych pagórków leśnych, do tych łąk zielonych,</p>
+			<p>Szeroko nad błękitnym Niemnem rozciągnionych;</p>
+			<p>Do tych pól malowanych zbożem rozmaitem,</p>
+			<p>Wyzłacanych pszenicą, posrebrzanych żytem;</p>
+		</div>
+	</section>
+	
+	<footer class="footer">
+		<p>Adam Mickiewicz: Pan Tadeusz</p>
+	</footer>
 </body>
 </html>
